[package]
name = "raytracing-rust-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4.0"
glam = { version = "0.24", default-features = false, features = ["libm"] }
rand = "0.8"
palette = "0.7.3"
rayon = "1.8.0"
